--- a/style.css
+++ b/style.css
@@ -328,3 +328,105 @@ font-size: 2vh;
     background-color: #cab973;
     color: #fff;
 }
+.contact{
+    height: 50vh;
+    width: 100vw;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contact>.container{
+    height: 35vh;
+    width: 80vw;
+    background-image: url(contact.png);
+    object-fit: cover;
+    object-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    gap: 2vw;
+}
+.contact>.container>h1{
+font-weight: 300;
+font-size: 3vh;
+}
+.contact>.container>a{
+    text-decoration: none;
+    text-transform: capitalize;
+    color: #cab973;
+    font-size: 2vh;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.contact>.container>a>span>i{
+    font-size: 2vh;
+}
+footer{
+    height: 45vh;
+    width: 100vw;
+    background-color: #F4F2EE;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+footer>.left{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 2vw;
+    padding: 2vw 10vw;
+}
+footer>.right{
+    background-color: red;
+    height: 100%;
+    width: 50%;
+}
+
+.left>.logo{
+    width: 10vw;
+    height: 5vh;
+    cursor: pointer;
+}
+.logo>img{
+    height: 100%;
+    width: 100%;
+}
+.left>p{
+    font-size: 1.5vh;
+}
+.left>.links{
+    display: flex;
+    gap: 5vw;
+   text-transform: uppercase;
+}
+.links>a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.9vh;
+    font-weight: 300;
+    /* border: 1px solid #fff; */
+    padding: 1vh 2vh;
+    border-radius: 50px;
+    transition: cubic-bezier(0.165, 0.84, 0.44, 1).8s;
+}
+.links>a:hover{
+    background-color: #d9c8854a;
+}
+.left>.social>i{
+    font-size: 3vh;
+    padding-right: 2vh;
+    color: gray;
+    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275).5s;
+    cursor: pointer;
+}
+.left>.social>i:hover{
+    
+    color: #cab973;
+}
