--- a/product.css
+++ b/product.css
@@ -2,23 +2,10 @@
 margin: 0;
 padding: 0;
 box-sizing: border-box;
-font-family: 'Poppins', sans-serif;
 }
 html,body{
 height: 100%;
 width: 100%;
-}
-main{
-    position: relative;
-    overflow: hidden;
-}
-.home{
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    background-image: url(homepage.jpeg);
-    object-fit: cover;
-    object-position: 50% 10%;
 }
 
 nav{
@@ -31,7 +18,8 @@ nav{
     align-items: center;
     padding: 4vw 0;
     z-index: 100;
-    
+    color: #000;
+    /* background-color: #000; */
 
 }
 nav>.logo{
@@ -49,8 +37,8 @@ nav>.links{
 }
 .links>a{
     text-decoration: none;
-    color: #fff;
-    font-size: 1.9vh;
+    color: #000;
+    font-size: 1.5vh;
     font-weight: 300;
     /* border: 1px solid #fff; */
     padding: 1vh 2vh;
@@ -62,173 +50,24 @@ nav>.links{
 }
 nav>.cta>a{
     text-decoration: none;
-    color: #fff;
-    border: 1px solid #fff;
+    font-size: 1.5vh;
+    color: #000;
+    border: 1px solid #cab973;
     padding: 1.5vh 4vh;
     border-radius: 50px;
     text-transform: uppercase;
     transition: cubic-bezier(0.165, 0.84, 0.44, 1).5s;
 }
 nav>.cta>a:hover{
-    background-color: #fff;
-    color: #cab973;
-}
-.home>.hero{
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -30%);
-    text-align: center;
-    color: #fff;
-    text-transform: capitalize;
-    
-}
-.home>.hero>h1{
-    font-family: 'Cormorant Unicase', serif;
-    font-weight: 600;
-    font-size: 6vh;
-}
-.home>.hero>h1:nth-last-child(1){
-    font-family: 'Poppins', sans-serif;
-    font-weight: 200;
-}
-.about{
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-}
-.about>.hero{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    font-size: 4vh;
-    z-index: 10;
-}
-.about>.hero>h1{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    font-size: 5vh;
-    text-transform: capitalize;
-    color: #cab973;
-}
-.about>.hero>.cta>a{
-    border: 1px solid #cab973;
-    color: #cab973;
-    padding: 1vh 3vh;
-    border-radius: 50px;
-    text-transform: capitalize;
-    transition: cubic-bezier(0.165, 0.84, 0.44, 1).5s;
-    text-decoration: none;
-    font-size: 2vh;
-}
-.about>.hero>.cta>a:hover{
     background-color: #cab973;
     color: #fff;
 }
-.about>.center-img{
-    display: flex;
-    justify-content: space-between;
-    width: 100vw;
-    height: 30vh;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.about>.center-img>img{
-    height: 100%;
-    width: 25%;
-    filter: blur(5px);
-}
-.about>.leaves1{
-    height: 30vh;
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-}
-.about>.leaves1>img{
-    height: 100%;
-    filter: blur(4px);
-}
-.about>.leaves1>img:nth-last-child(1){
-    height: 100%;
-    filter: blur(2px);
-    transform: rotate(270deg);
-}
-.about>.leaves2{
-    height: 40vh;
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    bottom: 0;
-}
-.about>.leaves2>img{
-    height: 100%;
-    filter: blur(4px);
-    transform: rotate(270deg);
-}
-.about>.leaves2>img:nth-last-child(2){
-    height: 100%;
-    filter: blur(2px);
-    transform: rotate(0deg);
-}
-.description{
-    height: 70vh;
-    width: 100vw;
-    background-color: #F5F2F0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-}
-.description>.hero{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 10vh;
-}
-.description>.hero>.text{
-    text-align: center;
-    flex-direction: column;
-    display: flex;
-    gap: 1.5vh;
-}
-.description>.hero>.text>h1{
-font-weight: 200;
-font-size: 5vh;
-}
-.description>.hero>.text>h6{
-    font-weight: 400;
-font-size: 2vh;
-}
-.description>.hero>.flexbox{
-    display: flex;
-    gap: 12vh;
-    text-align: center;
-    text-transform: capitalize;
-}
-.description>.hero>.flexbox>.inner>h1{
-    font-weight: 200;
-    font-size: 5vh;
-    font-family: 'Poppins',sans-serif ;
-}
-.description>.hero>.flexbox>.inner>h6{
-    font-weight: 200;
-    font-size: 2vh;
-    font-family: 'Poppins', serif;
-}
 .products{
-    height: 170vh;
+    height: 220vh;
     width: 100vw;
     position: relative;
     padding: 8vw 0vw;
+   
 }
 .products>.heading{
     display: flex;
@@ -329,47 +168,6 @@ font-size: 2vh;
 .products>.cta>a:hover{
     background-color: #cab973;
     color: #fff;
-}
-.contact{
-    height: 50vh;
-    width: 100vw;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.contact>.container{
-    height: 35vh;
-    width: 80vw;
-    background-image: url(contact.png);
-    object-fit: cover;
-    object-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    gap: 2vw;
-}
-.contact>.container>h1{
-font-weight: 300;
-font-size: 3vh;
-}
-.contact>.container>a{
-    text-decoration: none;
-    text-transform: capitalize;
-    color: #cab973;
-    font-size: 2vh;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-.contact>.container>a>span>i{
-    font-size: 2vh;
-    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275).5s;
-}
-.contact>.container>a:hover span>i{
-    padding-left: .5vw;
 }
 footer{
     height: 45vh;
