--- a/Css/style.css
+++ b/Css/style.css
@@ -17,7 +17,7 @@ main {
   height: 100vh;
   width: 100vw;
   position: relative;
-  background-image: url(./images/homepage.jpeg);
+  background-image: url(/images/homepage.jpeg);
   object-fit: cover;
   object-position: 50% 10%;
 }
@@ -51,7 +51,7 @@ nav > .links-index {
 }
 .links-index > a {
   text-decoration: none;
-  color: #fff;
+  color: #000;
   font-size: 1.9vh;
   font-weight: 300;
   /* border: 1px solid #fff; */
@@ -64,8 +64,8 @@ nav > .links-index {
 }
 nav > .cta-index > a {
   text-decoration: none;
-  color: #fff;
-  border: 1px solid #fff;
+  color: #000;
+  border: 1px solid #cab973;
   padding: 1.5vh 4vh;
   border-radius: 50px;
   text-transform: uppercase;
@@ -74,6 +74,9 @@ nav > .cta-index > a {
 nav > .cta-index > a:hover {
   background-color: #fff;
   color: #cab973;
+}
+nav > .menu-index{
+  display: none;
 }
 .home > .hero {
   position: absolute;
@@ -442,7 +445,8 @@ footer > .right {
 /* Mobile view 425px */
 
 /* header responsiveness */
-@media (min-width: 425px) (max-width: 768px) {
+/* Header responsiveness */
+@media (min-width: 425px) and (max-width: 768px) {
   nav {
     width: 100vw;
     height: 10vh;
@@ -456,18 +460,11 @@ footer > .right {
     /* position: absolute; */
     left: 10%;
   }
-  nav > .links-index {
-    display: none;
-  }
-  nav > .links-index > a {
-  }
+  nav > .links-index,
   nav > .cta-index {
     display: none;
   }
-  nav > .cta-index > a {
-
-  }
-  nav>.menu-index {
+  nav > .menu-index {
     background-color: #fff;
     padding: 1.4vh 2vh;
     border-radius: 50%;
@@ -481,8 +478,8 @@ footer > .right {
   }
 }
 
-/* about responsiveness */
-@media (min-width: 425px)  (max-width: 768px){
+/* About responsiveness */
+@media (min-width: 425px) and (max-width: 768px) {
   .about > .hero {
     width: 100%;
     position: absolute;
@@ -499,7 +496,6 @@ footer > .right {
     font-size: 4vh;
     margin-bottom: 5vw;
   }
-
   .about > .center-img {
     display: none;
   }
@@ -508,36 +504,32 @@ footer > .right {
     position: absolute;
     top: 20%;
   }
-
   .about > .leaves2 {
     height: 20vh;
     bottom: 20%;
   }
 }
 
-/* description responsiveness */
-@media (min-width: 425px) (max-width: 768px){
-    .description {
-        height: 130vh;
-        padding: 0 3vw;
-      }
-    .description > .hero > .flexbox {
-        display: flex;
-        gap: 0vh;
-        text-align: center;
-        text-transform: capitalize;
-        flex-direction: column;
-      }
+/* Description responsiveness */
+@media (min-width: 425px) and (max-width: 768px) {
+  .description {
+    height: 130vh;
+    padding: 0 3vw;
+  }
+  .description > .hero > .flexbox {
+    display: flex;
+    gap: 0vh;
+    text-align: center;
+    text-transform: capitalize;
+    flex-direction: column;
+  }
 }
 
-/* product responsiveness */
-@media (min-width: 425px) (max-width: 768px){
+/* Product responsiveness */
+@media (min-width: 425px) and (max-width: 768px) {
   .products-index {
     height: 470vh;
   }
-.products-index>.grid{
-  height: 80%;
-}
   .products-index > .grid > .box {
     width: 80vw;
   }
@@ -547,45 +539,43 @@ footer > .right {
   }
 }
 
-/* contact responsiveness */
-@media (min-width: 425px) (max-width: 768px){
-  .contact{
+/* Contact responsiveness */
+@media (min-width: 425px) and (max-width: 768px) {
+  .contact {
     height: 60vh;
   }
-  .contact > .container{
+  .contact > .container {
     padding: 0 6vw;
     margin-top: 30vw;
   }
 }
 
-/* footer responsiveness */
-@media (min-width: 425px) (max-width: 768px){
-  footer{
+/* Footer responsiveness */
+@media (min-width: 425px) and (max-width: 768px) {
+  footer {
     flex-direction: column;
     padding: 3vw 2vw;
     height: 40vh;
   }
-  footer>.left{
+  footer > .left {
     width: 100%;
     gap: 8vw;
     padding: 1vw 3vw;
   }
-  footer>.left>.logo{
+  footer > .left > .logo {
     width: 20vw;
   }
-  footer>.right{
+  footer > .right {
     width: 100%;
     padding: 8vw 0vw;
   }
-  footer>.right>.links{
+  footer > .right > .links {
     gap: 0;
   }
-
 }
 
-/* Ipad view */
-/* header responsiveness */
-@media ( min-width: 768px) and  (max-width: 1024px) {
+/* iPad view */
+@media (min-width: 768px) and (max-width: 1024px) {
   nav {
     width: 100vw;
     height: 10vh;
@@ -599,17 +589,11 @@ footer > .right {
     /* position: absolute; */
     left: 10%;
   }
-  nav > .links-index {
-    display: none;
-  }
-  nav > .links-index > a {
-  }
+  nav > .links-index,
   nav > .cta-index {
     display: none;
   }
-  nav > .cta-index > a {
-  }
-  nav>.menu-index {
+  nav > .menu-index {
     background-color: #fff;
     padding: 1.5vh 2vh;
     border-radius: 50%;
@@ -622,6 +606,7 @@ footer > .right {
     display: none;
   }
 }
+
 /* about responsiveness */
 @media ( min-width: 768px) and  (max-width: 1024px){
   .about > .hero {
@@ -878,7 +863,7 @@ footer > .right {
 }
 
 /* Header responsiveness */
-@media (min-width: 425px) (max-width: 768px){
+@media (min-width: 425px) and (max-width: 768px) {
   nav {
     width: 100vw;
     height: 10vh;
@@ -895,12 +880,8 @@ footer > .right {
   nav > .links {
     display: none;
   }
-  nav > .links > a {
-  }
   nav > .cta {
     display: none;
-  }
-  nav > .cta > a {
   }
   nav > .menu {
     background-color: #cab9735c;
@@ -1287,13 +1268,11 @@ footer > .right {
 }
 
 /* Product responsiveness */
-@media (min-width: 425px) and (max-width: 768px),
-       /* (min-width: 768px) and (max-width: 1024px)  */
-       {
+@media (min-width: 425px) and (max-width: 768px) {
   .product-p {
     height: 690vh; /* Adjust height as needed */
   }
-  .products-index{
+  .products-index {
     height: 490vh;
   }
   .products-index > .grid > .box {
@@ -1303,6 +1282,7 @@ footer > .right {
     width: 80vw; /* Adjust width as needed */
   }
 }
+
 
 /* Footer responsiveness */
 @media (min-width: 425px) and (max-width: 768px),
@@ -1499,8 +1479,7 @@ footer > .right {
 }
 
 /* Navbar Responsiveness */
-
-@media (min-width: 425px) (max-width: 768px) {
+@media (min-width: 425px) and (max-width: 768px) {
   nav {
     width: 100vw;
     height: 10vh;
